<resources>
    <string name="app_name">BusinessCard</string>
    <string name="business_card_txt">Cartão de Visita</string>
    <string name="name_tv">Nome</string>
    <string name="phone_tv">Telefone</string>
    <string name="email_tv">Email</string>
    <string name="company_tv">Nome da empresa</string>
    <string name="new_card_txt">Novo Cartão</string>
    <string name="color_background_tv">Cor de fundo</string>
    <string name="confirm_txt">Confirmar</string>
    <string name="show_sucess_message">Cartão de visita adicionado com sucesso !</string>
    <string name="share_txt">Compartilhar</string>

</resources>